[package]
name = "st7789-driver"
description = "ST7789 TFT LCD driver with embedded-graphics support"
version = "0.8.1"
authors = [
    "Ales Katona <almindor@gmail.com>",
    "Paul Sajna <sajattack@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/wendell1002/ST7789-driver"
keywords = ["embedded-hal-driver", "st7789", "display", "on_std"]
readme = "README.md"
documentation = "https://docs.rs/st7789-driver"

[dependencies]
display-interface = "0.4.1"
embedded-hal = "0.2.7"
nb = "1.1.0"

[dependencies.embedded-graphics-core]
optional = true
version = "0.4.0"

[dependencies.heapless]
optional = true
version = "0.8.0"

[features]
default = ["graphics", "batch"]
graphics = ["embedded-graphics-core"]
batch = ["heapless", "graphics"]
